fix: temporary fix for the overflow problem of modals

--- a/src/app.css
+++ b/src/app.css
@@ -125,6 +125,10 @@ table {
   border-spacing: 0;
 }
 
+html, body{
+  overflow: hidden;
+}
+
 /* Variables */
 body {
   font-family: "Dosis, sans-serif";
